<resources>
    <string name="app_name">ToDoProjects</string>
    <string name="todo_projects"><![CDATA[ToDo & Projects]]></string>
    <string name="image">image</string>
    <string name="empty"> </string>
    <string name="no_auth">Continue without authorization</string>
    <string name="back">back</string>
    <string name="about_auth">С другой стороны новая модель организационной деятельности представляет
        собой интересный эксперимент проверки новых предложений. Разнообразный и богатый опыт
        консультация с широким активом обеспечивает широкому кругу (специалистов) участие в
        формировании существенных финансовых и административных условий. Разнообразный и богатый
        опыт начало повседневной работы по формированию позиции позволяет оценить значение новых
        предложений.</string>
    <string name="checkbox">Do not show it again</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_add_folder">Add folder</string>
    <string name="menu_add_project">Add project</string>
    <string name="menu_add_shop_list">Add shop list</string>
    <string name="menu_add_task">Add task</string>

    <string name="menu_shops">Shops</string>
    <string name="menu_goods">Goods</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings2">Settings 2</string>
    <string name="menu_about">About</string>

    <string name="btn_filter">Filter</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fab_add">Add todo</string>
    <string name="logout">Logout</string>
    <string name="no_google_account">No google account</string>

    <string name="task_hint">Task name</string>
    <string name="task_date">Task date</string>
    <string name="task_note">Task note</string>

    <string name="folder_hint">Folder name</string>
    <string name="folder_date">Folder date</string>
    <string name="folder_note">Folder note</string>

    <string name="project_hint">Project name</string>
    <string name="project_date">Project date</string>
    <string name="project_note">Project note</string>

    <string name="shop_list_hint">Shop list name</string>
    <string name="shop_list_date">Shop list date</string>
    <string name="shop_list_note">Shop list note</string>

    <string name="task_ok">OK</string>

    <string name="undo">UNDO</string>

    <string name="user_logout">User logout</string>
    <string name="user_login">User login</string>

    <string name="clear_date">Clear</string>

    <string name="get_folder_name">Please, enter folder name</string>
    <string name="get_project_name">Please, enter project name</string>
    <string name="get_shop_list_name">Please, enter shop list name</string>

    <string name="enter_the_text_here">Enter the text here</string>
    <string name="folder">Folder</string>
    <string name="project">Project</string>
    <string name="shopping">Shop list</string>
    <string name="cancel">Cancel</string>
    <string name="clear_text">Clear text</string>

    <string name="sync">Synchronization</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General settings</string>
    <string name="sync_settings_summary">Auto synchronization…</string>
    <string name="auto_sync">Auto synchronization</string>
    <string name="auto_sync_summary">Synchronization after a set time interval</string>
    <string name="auto_sync_interval">Synchronization interval</string>
    <string name="auto_sync_interval_summary">Synchronization time interval</string>
    <string name="start_sync">Start sync</string>
    <string name="account">Account</string>
    <string name="common_settings">Common settings</string>
    <string name="palette">Palette</string>
    <string name="current_account">Current account</string>
    <string name="text_for_logout">Press on account to logout</string>
    <string name="exchange_finished">Exchange finished</string>
    <string name="do_sync">Start sync manually</string>

</resources>