<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add_folder"
        android:title="@string/menu_add_folder" />
    <item
        android:id="@+id/menu_add_project"
        android:title="@string/menu_add_project" />
    <item
        android:id="@+id/menu_add_shop_list"
        android:title="@string/menu_add_shop_list" />
    <item
        android:id="@+id/menu_shops"
        android:title="@string/menu_shops" />
    <item
        android:id="@+id/menu_goods"
        android:title="@string/menu_goods" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/menu_about"
        android:title="@string/menu_about" />
</menu>