<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/base_margin"
    tools:context=".TaskActivity">

    <LinearLayout
        android:id="@+id/local_group_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/base_margin">

        <Spinner
            android:id="@+id/task_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:dropDownWidth="wrap_content"
            android:minHeight="48dp" />

        <ImageButton
            android:id="@+id/clear_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/clear_text"
            android:layout_gravity="end"
            android:contentDescription="@string/clear_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/local_group_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/base_margin">

        <CheckBox
            android:id="@+id/task_mark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_weight="1"
            android:button="@drawable/checkbox"
            android:minHeight="48dp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:targetApi="o" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/local_group_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/base_margin" >

        <CheckBox
            android:id="@+id/task_grade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/star_checkbox"
            android:layout_gravity="top" />

        <EditText
            android:id="@+id/task_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:hint="@string/task_date"
            android:importantForAutofill="no"
            android:inputType="date"
            android:minHeight="48dp"
            android:layout_gravity="top"
            android:gravity="center_horizontal"
            android:focusableInTouchMode="false"
            tools:targetApi="o" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin"
            android:hint="@string/task_note"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            tools:targetApi="o" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/task_ok"
        android:text="@string/task_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>